--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,13 @@ services:
     volumes:
       - ./:/code
     command: /bin/bash
+
+  xdebug:
+      image: posobota/hello-world-xdebug
+      build:
+        context: .
+        dockerfile: docker/xebug/Dockerfile
+      volumes:
+        - ./:/code
+      environment:
+        - CODECLIMATE_REPO_TOKEN
